samples/_failures_safe/1761197003_95a8cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c63582d.c: In function ‘main’:
./samples/SAFE/__tmp_5c63582d.c:156:5: error: expected declaration or statement at end of input
  156 |     dijkstra(graph, n, start, dist);
      |     ^~~~~~~~
